@@ -393,7 +393,9 @@ public final class JMethodSignature extends JAnnotatedElementHelper {
         for (int i = 0; i < _params.size(); i++) {
             
             JType  jType  = ((JParameter) _params.get(i)).getType();
-            while (jType.isArray()) { jType = jType.getComponentType(); }
+            while (jType instanceof JArrayType) {
+                jType = ((JArrayType) jType).getComponentType(); 
+            }
             if (!jType.isPrimitive()) {
                 JClass jclass = (JClass) jType;
                 names.addElement(jclass.getName());
